--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('images/img_v_1.jpg');">
+            <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('images/casual_picture.jpg');">
               
               <div class="text">
                 <div class="post-categories mb-3">
-                  <span class="post-category bg-danger">Travel</span>
-                  <span class="post-category bg-primary">Food</span>
+                  <span class="post-category bg-danger">Serverless</span>
+                  <span class="post-category bg-primary">Large scale</span>
                 </div>
                 <h2>The AI magically removes moving objects from videos.</h2>
                 <span class="date">July 19, 2019</span>
