--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('images/casual_picture.jpg');">
+            <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('images/casual_picture.png');">
               
               <div class="text">
                 <div class="post-categories mb-3">
