--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="text">
                 <div class="post-categories mb-3">
                   <span class="post-category bg-danger">Serverless</span>
-                  <span class="post-category bg-primary">Large scale</span>
+                  <span class="post-category bg-primary">CI-CD</span>
                 </div>
                 <h2>The AI magically removes moving objects from videos.</h2>
                 <span class="date">July 19, 2019</span>
